Create basic working version of video upload

--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -1,4 +1,4 @@
-.guitar-quest-pieces
+.guitar-quest-piece
   .points-to-next-level
     position relative
     top 17px
@@ -10,3 +10,13 @@
   //   cursor pointer
   //   &:hover
   //     background-color #eeeeee
+
+  .video-preview
+    width 550px
+
+  .link-btn
+    padding-top 9px
+    height 80px
+
+  .video-well
+    height 300px
