--- a/app/piece/template.jade
+++ b/app/piece/template.jade
@@ -1,31 +1,53 @@
-.guitar-quest-pieces.container
+.guitar-quest-piece.container
   .panel.panel-default
     .panel-heading 20 points
     .panel-body
       h4 Estudio Sin Luz
       p Andres Segovia
-      .actions
-        .get-music.btn.btn-default Get Sheet Music
-        .btn.btn-default Request Skype Lesson
+      .row.actions
+        .col-md-4
+          iframe(
+            src="https://embed.spotify.com/?uri=spotify:track:1gFOPRH492kvYMN19xnMoJ"
+            width="100%"
+            height="80"
+            frameborder="0"
+            allowtransparency="true"
+          )
+        .col-md-4
+          a.link-btn.btn.btn-default.btn-block(href='http://imslp.org/wiki/Fantasie,_Op.7_(Sor,_Fernando)' target="_blank")
+            div
+              i.fa.fa-book.fa-3x
+            div Get Sheet Music
+        .col-md-4
+          .link-btn.btn.btn-default.btn-block
+            div
+              i.fa.fa-video-camera.fa-3x
+            div Request Video Lesson
+
       .row
         .col-xs-12
           p Meh bespoke Odd Future, sriracha YOLO Pinterest twee +1 semiotics mumblecore XOXO put a bird on it DIY mixtape. Marfa narwhal fap, flexitarian Williamsburg beard gentrify Austin kale chips swag American Apparel cold-pressed freegan. Flannel Truffaut cray cold-pressed. Crucifix stumptown quinoa, mixtape Truffaut four loko McSweeney's pour-over tofu flannel gentrify Wes Anderson chambray beard cardigan. Post-ironic heirloom master cleanse, slow-carb pickled iPhone chambray quinoa narwhal VHS Wes Anderson.
 
-      p To complete piece should be memorized, played with good technique, and played musically.
+      p To complete upload a video of you playing the piece below. The piece should be memorized, played with good technique, and played musically.
 
-
-      //- h5 Submit video:
-      .row.well
-        //- .col-xs-12
-        //-   video
+      .row.well.video-well
         .col-xs-12.text-center
           //- div
           //-   .btn.btn-primary(ng-click='pieceCtrl.getVideo()') Record Video
-          div
-            .btn.btn-primary Upload Video
+          //- video.video-preview(ng-if='pieceCtrl.videoSelected' controls ngf-src="pieceCtrl.videoFile")
+          //- video.video-preview(ng-src="{{pieceCtrl.videoUploadSrc}}")
+          video.video-preview(ng-show='pieceCtrl.videoUploadSrc' controls)
+          .btn.btn-primary(ng-hide='pieceCtrl.videoSelected' ngf-select ngf-change="pieceCtrl.upload($file)") Upload on file change
+          .row
+            .col-xs-8.col-xs-offset-2
+              progressbar(
+                ng-show='pieceCtrl.videoSelected && !pieceCtrl.videoUploadSrc'
+                max="100"
+                value="pieceCtrl.progressPercentage"
+              )
+          //- div
+          //-   input(type='file' fileread='pieceCtrl.videoUpload' value='upload video')
           //- .btn.btn-primary(ng-click='pieceCtrl.stopVideo()') Stop Video
           //- .btn.btn-primary(ng-click='pieceCtrl.replayVideo()') Replay Video
         //- .col-sm-6
         //-   .btn.btn-primary.btn-block(ng-click='pieceCtrl.stopVideo()') Stop
-        //- .embed-responsive.embed-responsive-16by9
-        //-   iframe(width="420" height="315" src="https://www.youtube.com/embed/oPfZVflJdp0" frameborder="0" allowfullscreen)
