Restyle piece submission page

--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -6,10 +6,6 @@
     margin-bottom 15px
   .get-music
     margin-right 15px
-  // .level-panel
-  //   cursor pointer
-  //   &:hover
-  //     background-color #eeeeee
 
   .video-preview
     width 550px
@@ -18,5 +14,17 @@
     padding-top 9px
     height 80px
 
-  .video-well
-    height 300px
+  .loading
+    height 250px
+    padding-top 65px
+    h5
+      color gray
+
+  .select-video
+    height 250px
+    padding-top 65px
+    color gray
+    cursor pointer
+
+    h5
+      color gray
