--- a/app/piece/template.jade
+++ b/app/piece/template.jade
@@ -1,20 +1,20 @@
 .guitar-quest-piece.container
   .panel.panel-default
-    .panel-heading 20 points
+    .panel-heading {{pieceCtrl.piece.exp}} exp
     .panel-body
-      h4 Estudio Sin Luz
-      p Andres Segovia
+      h4 {{pieceCtrl.piece.name}}
+      p {{pieceCtrl.piece.composer}}
       .row.actions
         .col-md-4
           iframe(
-            src="https://embed.spotify.com/?uri=spotify:track:1gFOPRH492kvYMN19xnMoJ"
+            ng-src="{{pieceCtrl.getSpotifySrc()}}"
             width="100%"
             height="80"
             frameborder="0"
             allowtransparency="true"
           )
         .col-md-4
-          a.link-btn.btn.btn-default.btn-block(href='http://imslp.org/wiki/Fantasie,_Op.7_(Sor,_Fernando)' target="_blank")
+          a.link-btn.btn.btn-default.btn-block(ng-href='{{pieceCtrl.piece.sheetMusicURL}}' target="_blank")
             div
               i.fa.fa-book.fa-3x
             div Get Sheet Music
@@ -22,11 +22,11 @@
           .link-btn.btn.btn-default.btn-block
             div
               i.fa.fa-video-camera.fa-3x
-            div Request Video Lesson
+            div Request Private Lesson
 
       .row
         .col-xs-12
-          p Meh bespoke Odd Future, sriracha YOLO Pinterest twee +1 semiotics mumblecore XOXO put a bird on it DIY mixtape. Marfa narwhal fap, flexitarian Williamsburg beard gentrify Austin kale chips swag American Apparel cold-pressed freegan. Flannel Truffaut cray cold-pressed. Crucifix stumptown quinoa, mixtape Truffaut four loko McSweeney's pour-over tofu flannel gentrify Wes Anderson chambray beard cardigan. Post-ironic heirloom master cleanse, slow-carb pickled iPhone chambray quinoa narwhal VHS Wes Anderson.
+          p {{pieceCtrl.piece.description}}
 
       p To complete upload a video of you playing the piece below. The piece should be memorized, played with good technique, and played musically.
 
