Use real quest data

--- a/app/tutorials/template.jade
+++ b/app/tutorials/template.jade
@@ -1,4 +1,5 @@
 .guitar-quest-tutorials.container
+  alert(type='info' close='piecesCtrl.closeAlert()') Use these tutorials as a resource to help you while learn new pieces.
   .row
     .col-md-6
       .panel.panel-default
@@ -9,7 +10,7 @@
     .col-md-6
       .panel.panel-default
         .panel-body
-          h4 Technique
+          h4 Basic Technique
           p In this tutorial, we'll introduce you to the basics of selecting a guitar, books, and accessories.
           .btn.btn-primary Start tutorial
     .col-md-6
@@ -28,6 +29,48 @@
       .panel.panel-default
         .panel-body
           h4 Memorization
+          p In this tutorial, we'll introduce you to the basics of selecting a guitar, books, and accessories.
+          .btn.btn-primary Start tutorial
+
+     .col-md-6
+      .panel.panel-default
+        .panel-body
+          h4 Baroque Music Interpretation
+          p In this tutorial, we'll introduce you to the basics of selecting a guitar, books, and accessories.
+          .btn.btn-primary Start tutorial
+
+     .col-md-6
+      .panel.panel-default
+        .panel-body
+          h4 Romantic Interpretation
+          p In this tutorial, we'll introduce you to the basics of selecting a guitar, books, and accessories.
+          .btn.btn-primary Start tutorial
+
+     .col-md-6
+      .panel.panel-default
+        .panel-body
+          h4 Classical Music Interpretation
+          p In this tutorial, we'll introduce you to the basics of selecting a guitar, books, and accessories.
+          .btn.btn-primary Start tutorial
+
+     .col-md-6
+      .panel.panel-default
+        .panel-body
+          h4 Contemporary Music Interpretation
+          p In this tutorial, we'll introduce you to the basics of selecting a guitar, books, and accessories.
+          .btn.btn-primary Start tutorial
+
+      .col-md-6
+      .panel.panel-default
+        .panel-body
+          h4 Tremelo
+          p In this tutorial, we'll introduce you to the basics of selecting a guitar, books, and accessories.
+          .btn.btn-primary Start tutorial
+
+      .col-md-6
+      .panel.panel-default
+        .panel-body
+          h4 Slurs
           p In this tutorial, we'll introduce you to the basics of selecting a guitar, books, and accessories.
           .btn.btn-primary Start tutorial
 
