--- a/app/piece/template.jade
+++ b/app/piece/template.jade
@@ -1,6 +1,6 @@
 .guitar-quest-piece.container
   .panel.panel-default
-    .panel-heading {{pieceCtrl.piece.exp}} exp
+    .panel-heading {{pieceCtrl.piece.exp}} points
     .panel-body
       h4 {{pieceCtrl.piece.name}}
       p {{pieceCtrl.piece.composer}}
@@ -28,7 +28,7 @@
         .col-xs-12
           p {{pieceCtrl.piece.description}}
 
-      p To complete upload a video of you playing the piece below. The piece should be memorized, played with good technique, and played musically.
+      p To complete upload a video of you playing the piece below. The piece should be memorized, played with good technique, and played musically. Once submitted, we will review your video within 24 hours.
 
       .row.well.video-well
         .col-xs-12.text-center
