--- a/app/pieces/template.jade
+++ b/app/pieces/template.jade
@@ -1,20 +1,22 @@
 .guitar-quest-music.container
 
+  alert(type='info' close='piecesCtrl.closeAlert()') Learn pieces to earn experience points and progress to higher levels. If you have previous experience playing guitar, you can take the <a href='' ui-sref='guitarQuest.initialAssessment'>initial assessment</a> to start at a higher level.
+
   .row.previous-and-next
     .col-xs-12
-      .pull-left
+      .pull-left(ng-if='piecesCtrl.selectedLevel > 1')
         a(href='' ng-click='piecesCtrl.goToPreviousLevel()')
           span.fa.fa-angle-double-left
           span &nbsp;Previous
-      .pull-right
+      .pull-right(ng-if='piecesCtrl.selectedLevel < piecesCtrl.user.level')
         a(href='' ng-click='piecesCtrl.goToNextLevel()')
           span Next&nbsp;
           span.fa.fa-angle-double-right
   .row
     .col-xs-6
       h5.pull-left Level {{piecesCtrl.selectedLevel}}
-    .col-xs-6(ng-if='piecesCtrl.userLevel === piecesCtrl.selectedLevel')
-      .points-to-next-level.pull-right {{piecesCtrl.getExpToNextLevel()}} exp to level {{piecesCtrl.selectedLevel + 1}}
+    .col-xs-6(ng-if='piecesCtrl.user.level === piecesCtrl.selectedLevel')
+      .points-to-next-level.pull-right {{piecesCtrl.user.pointsIntoCurrentLevel}} / {{piecesCtrl.levelHelper.getTotalLevelExp(piecesCtrl.selectedLevel)}} points
   .row
     .col-xs-12
       progressbar(
@@ -25,7 +27,7 @@
   .row
     .col-sm-4(ng-repeat='piece in piecesCtrl.pieces')
       .piece-panel.panel.panel-default(ui-sref='guitarQuest.piece({pieceId: piece._id})')
-        .piece-heading.panel-heading {{piece.exp}} exp
+        .piece-heading.panel-heading {{piece.points}} points
         .panel-body
           h5.piece-title {{piece.name}}
           .piece-composer {{piece.composer}}
