Update quest info text

--- a/app/quests/template.jade
+++ b/app/quests/template.jade
@@ -1,5 +1,5 @@
 .guitar-quest-music.container
-  alert(type='info' close='questsCtrl.closeAlert()') Complete quests to earn lesson credits. Lesson credits can be used to get discounts on private video lessons.
+  alert(type='info' close='questsCtrl.closeAlert()') Complete quests to earn credits for buying private video lessons.
   .row
     .col-sm-4(ng-repeat='quest in questsCtrl.quests')
       .quest-panel.panel.panel-default
