--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -20,6 +20,10 @@
     h5
       color gray
 
+  .piece-heading
+    padding-top 5px
+    padding-bottom 5px
+
   .select-video
     height 250px
     padding-top 65px
