--- a/local_modules/directives/gq_navbar/template.jade
+++ b/local_modules/directives/gq_navbar/template.jade
@@ -15,12 +15,14 @@
             ng-if='navbarCtrl.isLoggedIn()'
           )
             li(ng-class="{active: navbarCtrl.stateIncludes('guitarQuest.pieces')}")
-              a(ui-sref='guitarQuest.pieces') Pieces
+              a(ui-sref='guitarQuest.pieces')
+                span Pieces
+                span.badge.link-badge.badge-warning 2
 
             li(ng-class="{active: navbarCtrl.stateIncludes('guitarQuest.quests')}")
               a(ui-sref='guitarQuest.quests')
                 span Quests
-                span.badge.link-badge 2
+                span.badge.link-badge.badge-warning 2
 
             li(ng-class="{active: navbarCtrl.stateIncludes('guitarQuest.tutorials')}")
               a(ui-sref='guitarQuest.tutorials') Tutorials
@@ -35,8 +37,18 @@
               a(ui-sref='guitarQuest.createAccount') Create Account
 
           ul.nav.navbar-nav.navbar-right(ng-if='navbarCtrl.isLoggedIn()')
-            li(ng-click='navbarCtrl.logout()')
-              a Logout
+            li(dropdown)
+              a.icon-link(dropdown-toggle)
+                i.fa.fa-user
+                i.caret
+              ul.dropdown-menu(role="menu" aria-labelledby="single-button")
+                li(role="menuitem")
+                  a(href="#") Account
+                  a(href="#" ng-click='navbarCtrl.logout()') Logout
+          .navbar-text.navbar-right(ng-if='navbarCtrl.isLoggedIn()')
+            //- span.credit-summary.label.label-warning $20 Credit
+            span.text-warning $20 Credit
+            span.level-summary Level 2
 
             //- li.logout.visible-xs
             //-   a(href='#', ng-click='logout()') Log out {{credentials.google.email}}
