--- a/app/piece/template.jade
+++ b/app/piece/template.jade
@@ -1,10 +1,21 @@
 .guitar-quest-piece.container
   .panel.panel-default(ng-class='{"panel-warning": pieceCtrl.userPiece.status === "pending", "panel-danger": pieceCtrl.userPiece.status === "retry", "panel-success": pieceCtrl.userPiece.status === "finished"}')
     .piece-heading.panel-heading
-      div(ng-if='pieceCtrl.userPiece.status === "unfinished"') {{pieceCtrl.piece.points}} points
-      div(ng-if='pieceCtrl.userPiece.status === "pending"') Submitted
-      div(ng-if='pieceCtrl.userPiece.status === "finished"') Finished
-      div(ng-if='pieceCtrl.userPiece.status === "retry"') Please retry
+      .row(ng-if='pieceCtrl.userPiece.status === "unfinished"')
+        .col-xs-8 {{pieceCtrl.piece.points}} points
+        .col-xs-4.text-right
+      .row(ng-if='pieceCtrl.userPiece.status === "pending"')
+        .col-xs-8 Submitted
+        .col-xs-4.text-right
+          i.fa.fa-question
+      .row(ng-if='pieceCtrl.userPiece.status === "finished"')
+        .col-xs-8 Finished
+        .col-xs-4.text-right
+          i.fa.fa-check
+      .row(ng-if='pieceCtrl.userPiece.status === "retry"')
+        .col-xs-8 Please retry
+        .col-xs-4.text-right
+          i.fa.fa-exclamation
     .panel-body
       h4 {{pieceCtrl.piece.name}}
       p {{pieceCtrl.piece.composer}}
@@ -12,14 +23,6 @@
       p To complete upload a video of you playing the piece below. The piece should be memorized, played with good technique, and played musically. Once submitted, we will review your video within 24 hours.
 
       .row.actions
-        .col-md-4
-          iframe(
-            ng-src="{{pieceCtrl.getSpotifySrc()}}"
-            width="100%"
-            height="80"
-            frameborder="0"
-            allowtransparency="true"
-          )
         .col-md-4
           a.link-btn.btn.btn-default.btn-block(ng-href='{{pieceCtrl.piece.sheetMusicURL}}' target="_blank")
             div
@@ -30,6 +33,14 @@
             div
               i.fa.fa-video-camera.fa-3x
             div Request Private Lesson
+        .col-md-4
+          iframe(
+            ng-src="{{pieceCtrl.getSpotifySrc()}}"
+            width="100%"
+            height="80"
+            frameborder="0"
+            allowtransparency="true"
+          )
 
       .row.well.video-well
         .col-xs-12.text-center
