--- a/local_modules/directives/gq_navbar/style.styl
+++ b/local_modules/directives/gq_navbar/style.styl
@@ -3,3 +3,13 @@
     cursor pointer
   .link-badge
     margin-left 5px
+  .icon-link
+    font-size 16px
+  .level-summary
+    color gray
+    margin-left 15px
+    margin-right 5px
+  .credit-summary
+    font-size 12px
+  .badge-warning
+    background-color #FF9800
