Show real user level/credit info in navbar

--- a/app/pieces/template.jade
+++ b/app/pieces/template.jade
@@ -1,6 +1,8 @@
 .guitar-quest-music.container
 
-  alert(type='info' close='piecesCtrl.closeAlert()') Learn pieces to earn experience points and progress to higher levels. If you have previous experience playing guitar, you can take the <a href='' ui-sref='guitarQuest.initialAssessment'>initial assessment</a> to start at a higher level.
+  alert(type='info' close='piecesCtrl.closeAlert()') Welcome to GuitarQuest! In this section, you will learn pieces to earn experience points and progress to higher levels. With each new level, you will unlock new, more challenging pieces. If you have previous experience playing guitar, you can take the <a href='' ui-sref='guitarQuest.initialAssessment'>initial assessment</a> to start at a higher level.
+  alert(type='success' close='piecesCtrl.closeAlert()') Congratulations! Your video submission for malaguena was accepted and you earned 10 points.
+  alert(type='danger' close='piecesCtrl.closeAlert()') Your video submission for Malaguena was not accepted. Please review teacher feedback and submit another video.
 
   .row.previous-and-next
     .col-xs-12
