--- a/app/quests/style.styl
+++ b/app/quests/style.styl
@@ -1,16 +1,19 @@
 .guitar-quest-music
   .quest-panel
-    padding-top 15px
-    padding-bottom 15px
+    padding-top 10px
+    padding-bottom 10px
     border 2px solid #FF9800
 
+  .quest-title
+    font-size 18px
+
   .reward
-    font-size 24px
+    font-size 22px
     margin-top -5px
     margin-bottom 10px
 
   .description
-    font-size 16px
+    font-size 14px
     line-height 20px
 
   .exp
