Minor tweaks to the alert styles

--- a/app/pieces/style.styl
+++ b/app/pieces/style.styl
@@ -13,7 +13,6 @@
   .points-to-next-level
     position relative
     top 17px
-  // .level-panel
-  //   cursor pointer
-  //   &:hover
-  //     background-color #eeeeee
+  .alerts
+    .alert:not(:last-child)
+      margin-bottom 15px
