--- a/app/tutorials/template.jade
+++ b/app/tutorials/template.jade
@@ -1,5 +1,5 @@
 .guitar-quest-tutorials.container
-  alert(type='info' close='piecesCtrl.closeAlert()') Use these tutorials as a resource to help you while learn new pieces.
+  gq-notifications(category='tutorial')
   .row
     .col-md-6
       .panel.panel-default
