Add era to piece display

--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -2,7 +2,6 @@
   .jumbotron
     .container
       h2 A game for learning classical guitar
-      p This is placeholder text
       .btn.btn-primary.btn-lg Create a Free Account
 
   .container
@@ -10,17 +9,17 @@
       .col-md-4
         .panel.panel-default
           .panel-body
-            h5 Learn Music
+            h5 Earn points to increase your level
             p Submit videos of guitar pieces to earn points, and unlock more difficult pieces as you progress to higher levels.
 
       .col-md-4
         .panel.panel-default
           .panel-body
-            h5 Complete Quests
-            p Complete quests to unlock special music pieces, lesson credits, and other rewards.
+            h5 Collect rewards
+            p Complete "quests" to win credits for buying private video lessons.
 
       .col-md-4
         .panel.panel-default
           .panel-body
-            h5 Take lessons
+            h5 Learn from tutorials and lessons
             p Watch tutorials or request private video lessons when you need help.
