--- a/app/pieces/style.styl
+++ b/app/pieces/style.styl
@@ -6,13 +6,11 @@
     font-size 12px
   .piece-title
     margin 0px
-  .piece-composer
   .piece-heading
     padding-top 5px
     padding-bottom 5px
   .points-to-next-level
     position relative
     top 17px
-  .alerts
-    .alert:not(:last-child)
-      margin-bottom 15px
+  .piece-era
+    margin-top -8px
