--- a/app/pieces/template.jade
+++ b/app/pieces/template.jade
@@ -47,5 +47,5 @@
               i.fa.fa-exclamation
         .panel-body
           h5.piece-title {{piece.name}}
-          .piece-composer <strong>Composer:</strong> {{piece.composer}}
-          .piece-era <strong>Musical Era:</strong> {{piece.era}}
+          .piece-composer {{piece.composer}}
+          .piece-era {{piece.era}} Era
