Allow user to edit account and change password

--- a/app/quests/template.jade
+++ b/app/quests/template.jade
@@ -1,6 +1,8 @@
 .guitar-quest-music.container
   gq-notifications(category='quest')
   .row
+    .no-quests.text-center(ng-if='!questsCtrl.quests.length')
+      h5 No quests! Please check back later.
     .col-sm-4(ng-repeat='quest in questsCtrl.quests')
       .quest-panel.panel.panel-default
         .panel-body.text-center
