Add video review page for me or other teachers

--- a/app/pending_pieces/template.jade
+++ b/app/pending_pieces/template.jade
@@ -1,12 +1,15 @@
-.guitar-quest-pending.container
+.guitar-quest-pending-pieces.container
 
-  .text-center(ng-if='piecesCtrl.userPieces.length === 0')
+  .text-center(ng-if='pendingPiecesCtrl.userPieces.length === 0')
     h5 No pending pieces
-  .row
-    .col-xs-12(ng-repeat='piece in piecesCtrl.userPieces')
-      .piece-panel.panel.panel-default(
-        ui-sref='guitarQuest.piece({pieceId: piece._id})'
-      )
-        .panel-body
-          .piece-title user: {{piece.userId}}
-          .piece-composer piece: {{piece._id}}
+
+  .pending-piece-panel.panel.panel-default(
+    ng-repeat='userPiece in pendingPiecesCtrl.userPieces | orderBy:"updatedAt"'
+    ui-sref='guitarQuest.reviewSubmittedPiece({userPieceId: userPiece._id})'
+  )
+    .panel-body
+      .user-info
+        strong {{userPiece.user.name}}
+        span  {{userPiece.user.email}}
+        em  {{pendingPiecesCtrl.getTimeFromNow(userPiece.updatedAt)}}
+      h5 {{userPiece.piece.name}}
