--- a/app/pending_pieces/style.styl
+++ b/app/pending_pieces/style.styl
@@ -1,19 +1,3 @@
-.guitar-quest-music
-  .piece-panel
+.guitar-quest-pending-pieces
+  .pending-piece-panel
     cursor pointer
-  .previous-and-next
-    cursor pointer
-    font-size 12px
-  .piece-title
-    margin 0px
-  .piece-composer
-  .piece-heading
-    padding-top 5px
-    padding-bottom 5px
-  .points-to-next-level
-    position relative
-    top 17px
-  // .level-panel
-  //   cursor pointer
-  //   &:hover
-  //     background-color #eeeeee
